# homeworks_cpp

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
