cmake_minimum_required(VERSION 3.23)
project(untitled)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled main.cpp cmake-build-debug/main5.cpp main6.cpp)
add_executable(untitled2 main2.cpp)
add_executable(untitled3 main3.cpp)
add_executable(untitled4 main4.cpp)
add_executable(untitled5 main5.cpp)
add_executable(untitled6 main6.cpp)
